# zz9000-sdk

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-amissl-provider.yml  ci.yml
amiga/datatypes/: zz9k_picture_datatype.c
amiga/datatypes/descriptors/: ZZ9000-JPEG.b64  ZZ9000-JPEG.dtid  ZZ9000-JPEG.info  ZZ9000-PNG.b64  ZZ9000-PNG.dtid  ZZ9000-PNG.info
amiga/fd/: mpega.fd  mpega_lib.fd  zz9k_lib.fd
amiga/include/clib/: mpega_protos.h  zz9k_protos.h
amiga/include/inline/: mpega.h
amiga/include/libraries/: mpega.h
amiga/include/pragmas/: mpega_pragmas.h
amiga/include/proto/: mpega.h  zz9k.h
amiga/include/zz9k/: event_wait.h  library.h  library_vectors.h
amiga/mpega/: mpega_resident.c
amiga/provider/: zz9k_aead.c  zz9k_algorithms.c  zz9k_amissl.c  zz9k_amissl.h  zz9k_amissl_builtin.c  zz9k_amissl_builtin.h  zz9k_amissl_selftest.c  zz9k_ecdsa.c  zz9k_offload.c  zz9k_offload.h  zz9k_prov_local.h  zz9k_provider.c  zz9k_provider.h  zz9k_rsa.c  zz9k_x25519.c
amiga/src/: zz9k_library.c  zz9k_library_resident.c
blur/: build-blur.sh
conway/: build-conway.sh  conway.c
docs/: zz9k-68k-offload.md  zz9k-amissl-provider.md  zz9k-crypto-acceleration.md  zz9k-library.md  zz9k-modules.md  zz9k-picture-datatype.md  zz9k-release-smoke.md  zz9k-vendor-services.md
docs/superpowers/plans/: 2026-06-03-datatype-release-activation.md
docs/superpowers/specs/: 2026-06-03-datatype-release-activation-design.md
examples/amiga-crypto/: zz9k-crypto-demo.c
examples/amiga-jpeg-stream/: zz9k-jpeg-stream-demo.c
examples/amiga-library/: zz9k-library-demo.c
examples/amiga-typed-decode/: zz9k-typed-decode-demo.c
examples/blur/: blur.c  build-blur.sh
examples/conway/: build-conway.sh
examples/nanojpeg/: build-nanojpeg.sh  nanojpeg.c  zz9k_main.c
examples/raytrace/: build-raytrace.sh  zz9ktrace-main.c  zz9ktrace.cpp
examples/shell/: build-shell.sh
examples/vector/: build-vector.sh
host/include/zz9k/: host.h  reply.h  request.h
host/src/: zz9k_host.c
include/: zz9k_env.h
include/zz9k/: abi.h  audio.h  batch.h  caps.h  compression.h  crypto.h  image.h  image_geometry.h  module.h  sdk.h  service_registry.h  shared.h  surface.h  text.h
integration/amissl/: AMISSL_REF  Dockerfile  README.md  amissl-zz9000.patch  build-cryptoprofile.sh  build.sh
scripts/: build-m68k-amigaos.ps1  build-m68k-amigaos.sh  check-abi-mirror.sh  package-m68k-amigaos.ps1  package-m68k-amigaos.sh
shell/: build-shell.sh  shell.c
tests/: abi_layout_test.c  amiga_library_metadata_test.c  archive_7z_real_fixtures.h  archive_tool_batch_test.c  archive_tool_logic_test.c  archive_tool_source_test.c  backoff_schedule_test.c  batch_arena_test.c  bench_logic_test.c  bench_tool_source_test.c  call_irq_wait_test.c  capability_require_source_test.c  caps_helper_test.c  check-abi-mirror-selftest.sh  compression_lzh_helper_test.c  crypto_example_source_test.c  crypto_helper_test.c  crypto_soft_test.c  cryptobench_logic_test.c  datatype_descriptor_test.c  datatype_probe_source_test.c  docs_library_source_test.c  fbtest_logic_test.c  handshake_model_test.c  hash_tool_source_test.c  host_mailbox_source_test.c  host_mailbox_test.c  image_geometry_test.c  image_helper_test.c  image_stream_abi_test.c  image_stream_reply_test.c  image_stream_request_test.c  image_window_logic_test.c  inflate_tool_source_test.c  info_tool_source_test.c  irq_tool_source_test.c  jpeg_stream_example_source_test.c  jpeg_tool_logic_test.c  jpeg_tool_source_test.c  lha_batch_reference_test.c  (+64 more)
tests/fixtures/archives/: split-deflate.7z.b64  split-lzma.7z.b64  split-lzma2.7z.b64
tools/: rsa_kat_vector.h  zz9k-aead.c  zz9k-archive.c  zz9k-bench.c  zz9k-chacha.c  zz9k-crypto-soft.c  zz9k-crypto-soft.h  zz9k-cryptobench.c  zz9k-cryptoprofile.c  zz9k-dtprobe.c  zz9k-fb-common.c  zz9k-fb-common.h  zz9k-fbtest.c  zz9k-handshake-model.h  zz9k-hash.c  zz9k-image-window.c  zz9k-image-window.h  zz9k-inflate.c  zz9k-info.c  zz9k-irqtest.c  zz9k-jpeg-view.h  zz9k-jpeg.c  zz9k-libasync.c  zz9k-libbatch.c  zz9k-libcancel.c  zz9k-libdecode.c  zz9k-libevent.c  zz9k-libeventbatch.c  zz9k-libeventcancel.c  zz9k-libeventcb.c  zz9k-libeventlife.c  zz9k-libeventports.c  zz9k-libsmoke.c  zz9k-libtest.c  zz9k-libwait.c  zz9k-libwaitbatch.c  zz9k-m68k-offload-model.h  zz9k-m68k-runner.c  zz9k-m68k-runner.h  zz9k-m68kbench.c  (+18 more)
tools/lha-unix/: config.h  huf.c  lha.h  prototypes.h  slide.c  zz9k_lha_unix.c  zz9k_lha_unix.h  zz9k_lha_unix_support.c
vector/: vector.c
zz9k-loader/: build.cmd  build.sh  zz9000.h  zz9k  zz9k.c
